syntax = "proto3";

package proto_plugin.fixtures;

import "article.proto";

service ArticlesService {
    rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);

    rpc GetArticles(GetArticlesRequest) returns (GetArticlesResponse);

    rpc ArticleStream(ArticleStreamRequest) returns (stream ArticleStreamEvent);
}

message GetArticleRequest {
    uint64 article_id = 1;
}

message GetArticleResponse {
    Article article = 1;
}

message GetArticlesRequest {
    uint32 page = 1;
}

message GetArticlesResponse {
    repeated Article articles = 1;
}

message ArticleStreamRequest {}

message ArticleStreamEvent {
    Article article = 1;
}
